# SC20_Linux_R09_r00320.1

./: README.md
audio/mm-audio/qti-api-demo/: Makefile.am  audio_test.c  configure.ac  qlaudio_api.h  qti-api-demo.pc.in
audio/mm-audio/qti-audio-server/: qti_audio_client.cpp  qti_audio_client_death_notifier.cpp  qti_audio_proxy.cpp  qti_audio_server.cpp  qti_audio_server.h  qti_audio_server_interface.h
audio/mm-audio/sound_trigger/: sound_trigger_hw.c  sound_trigger_platform.c
audio/mm-audio/sound_trigger_hal/: sound_trigger_platform.c
camera/services/mm-camera-legacy/: configure.ac
data/dsi_netctrl/inc/: dsi_netctrl.h
data/dsi_netctrl/src/: dsi_netctrl.c  dsi_netctrli.c  dsi_netctrli.h
hardware/qcom/audio/: configure.ac
mcm-api/api/: mcm_data_v01.h  mcm_loc_v01.h  mcm_nw_v01.h
mcm-core/: mcmril.service.in
mcm-core/client/core/: mcm_client.c  mcm_qmi_client.c
mcm-core/ipc/: mcm_constants.h  mcm_data_v01.c  mcm_nw_v01.c  mcm_ril_v01.c  mcm_service_object_v01.h
mcm-core/ipc/idl/: mcm_data_v01.idl  mcm_ril_v01.idl
mcm-core/mcm_data/: mcm_data_srv.c
mcm-core/mcm_log_util/: log_util.c
mcm-core/server/: Makefile.am  start_mcm_ril_srv_le
mcm-gps/mcmlocserver/src/: loc_srv.cpp  loc_srv_proc_req_hdlrs.cpp
mdm-ss-mgr/atfwd-quectel/: Makefile.am  atfwd_daemon_quectel.c  quectel_at_handle.cpp  quectel_at_handle.h
mdm-ss-mgr/qmi-shutdown-modem/: qmi-shutdown-modem.c
poky/meta-qti-bsp/conf/: site.conf
qmi/: configure.ac
quectel-app/attfotademo/: Makefile.am  attfotademo.service  configure.ac
quectel-app/attfotademo/src/: Makefile.am  start_attfotademo
quectel-app/attfotademo/src/core/: attfotademo.c
quectel-app/bluetooth-test/: configure.ac
quectel-app/bluetooth-test/src/: Makefile.am  main.c  main.h  test_adapter.c  test_gatt.c
quectel-app/factory-reset/: CMakeLists.txt
quectel-app/lwm2m/: Makefile.am  configure.ac  lwm2m.conf  lwm2m_log.conf  lwm2mclient.service
quectel-app/lwm2m/src/: Makefile.am  start_lwm2mclient
quectel-app/lwm2m/src/core/: bootstrap.c  data.c  internals.h  liblwm2m.c  liblwm2m.h  management.c  objects.c  observe.c  packet.c  registration.c  transaction.c  uri.c
quectel-app/lwm2m/src/core/er-coap-13/: er-coap-13.c  er-coap-13.h
quectel-app/lwm2m/src/examples/client/: j_aes.c  j_aes.h  lwm2m_configure.c  lwm2m_configure.h  lwm2mclient.c  lwm2mclient.h  object_access_control.c  object_access_control.h  object_apn_connection_profile.c  object_apn_connection_profile.h  object_connectivity_exte.c  object_connectivity_exte.h  object_connectivity_moni.c  object_connectivity_stat.c  object_device.c  object_devicecap.c  object_firmware.c  object_host_device.c  object_host_device_vzw.c  object_host_device_vzw.h  object_location.c  object_location.h  object_security.c  object_security.h  object_server.c  object_server.h  object_software_mgnt.c  object_software_mgnt.h  quectel_getinfo.c  quectel_getinfo.h  quectel_sms.c  quectel_sms.h  system_api.c
quectel-app/lwm2m/src/examples/shared/: commandline.c  dtlsconnection.c  dtlsconnection.h  platform.c  platform.h
quectel-app/lwm2m/src/examples/shared/tinydtls/: build.sh  dtls.c
quectel-app/lwm2m/src/utils/: call_stack.cpp  call_stack.h  lwm2m_android_log.h  quectel_info_util.c  quectel_info_util.h
quectel-app/mobap-switch/: CMakeLists.txt  mobap-switch.c  mobap-switch.service  mobap_switch.conf
quectel-app/network-manager/: CMakeLists.txt  network_manager.ini  network_manager_le
quectel-app/network-manager/lib/systemd/system/: network-manager.service
quectel-app/network-manager/src/: CMakeLists.txt  network_manager.c
quectel-app/qaudio-api-test/: CMakeLists.txt  qaudio_api_test.c  wav.c  wav.h
quectel-app/ql-audio-test/: CMakeLists.txt
quectel-app/ql-cpustresstest/: CMakeLists.txt  ql-cpustresstest.service.in
quectel-app/ql-cpustresstest/src/: CMakeLists.txt  ql_cpustresstest.c
quectel-app/ql-gnss-test/: CMakeLists.txt
quectel-app/ql-gnss-test/src/: CMakeLists.txt  ql-gnss-test.c  ql_mcm_gps.h
quectel-app/ql-misc-test/: CMakeLists.txt  c_printf.c  ql_misc_at_test.c  ql_misc_test.c
quectel-app/ql-misc-test/util/: CMakeLists.txt  reboot-modem-test.c  send-at-tool.c  system-sleep-test.c
quectel-app/ql-nv-settings/: configure.ac  ql_nv_settings.service.in
quectel-app/ql-nv-settings/src/: Makefile.am  main.c
quectel-app/ql-power-manager/: CMakeLists.txt  ql-power-manager.service.in  ql_power_manager.conf
quectel-app/ql-power-manager/src/: CMakeLists.txt  ql_power_manager.c
quectel-app/ql-supl/: CMakeLists.txt  ql-supl.service.in  supl_test.conf
quectel-app/ql-supl/cmake/: FindQMI.cmake
quectel-app/ql-supl/src/: CMakeLists.txt  ql_supl.c
quectel-app/qlalsa-audio-test/: Makefile.am  configure.ac  qlplay.c  qlrec.c
quectel-app/qlril-api-test/: CMakeLists.txt
quectel-app/qlril-api-test/audio/: CMakeLists.txt  msm_audio.c  msm_audio.h  voice-test.c  voice_call_test.c
quectel-app/qlril-api-test/utils/: CMakeLists.txt  c_printf.c  qlril_api_test.c
quectel-app/qt/music/: music.pro
quectel-app/setbtmac/: CMakeLists.txt  setbtmac.service.in
quectel-app/setbtmac/src/: CMakeLists.txt  setbtmac.c
quectel-app/setwifimac/: CMakeLists.txt  setwifimac.service.in
quectel-app/setwifimac/src/: CMakeLists.txt  setwifimac.c
quectel-app/sound-manager/: CMakeLists.txt  sound-manager.service.in  sound_manager.ini
quectel-app/sound-manager/src/: CMakeLists.txt  linked_list.c  linked_list.h  main.c  main.c.old  msm_audio.c  msm_audio.h  wav.c
quectel-app/sound-manager/utils/: CMakeLists.txt  play_test.c
quectel-app/wifi-work-mode/: hostapd-wlan0.conf  ifcfg-wlan0  ifup-wlan  udhcpd.conf
quectel-core/fileparser/: CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
quectel-core/fileparser/m4/: libfileparser_search.m4
quectel-core/fileparser/src/: CMakeLists.txt  Makefile.am  Makefile.in  hexparser.c  hexparser.h  version.h.in
quectel-core/fileparser/util/: CMakeLists.txt  Makefile.am  Makefile.in  hextest.c  iniexample.c  parse.c
remotefs/qmi_rmt_storage/: rmt_storage_svc.c
(+303 files in other folders)
