find_library(ALSA_INTF_LIBS NAMES alsa_intf_msm8909 PATH_SUFFIXES lib)

set (AUDIO_SRC_FILES
	msm_audio.c
)

include_directories (
    ${PROJECT_SOURCE_DIR}/audio
)

add_executable (voice-test voice-test.c ${AUDIO_SRC_FILES})

target_include_directories(voice-test INTERFACE
    $<INSTALL_INTERFACE:include/>
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/>
)

target_link_libraries(voice-test
    ${CMAKE_THREAD_LIBS_INIT}
	${ALSA_INTF_LIBS}
)

install(TARGETS voice-test EXPORT ${EXPORT_TARGETS_NAME}TARGETS
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    FRAMEWORK DESTINATION Frameworks
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    COMPONENT core
)

add_executable (voice-call-test voice_call_test.c ${AUDIO_SRC_FILES})

target_include_directories(voice-call-test INTERFACE
    $<INSTALL_INTERFACE:include/>
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/>
)

target_link_libraries(voice-call-test
    ${CMAKE_THREAD_LIBS_INIT}
	${ALSA_INTF_LIBS}
    ql_ril
)

install(TARGETS voice-call-test EXPORT ${EXPORT_TARGETS_NAME}TARGETS
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    FRAMEWORK DESTINATION Frameworks
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    COMPONENT core
)
