set (PLAY_TEST_FILES
	play_test.c
	${PROJECT_SOURCE_DIR}/src/msm_audio.c
)

include_directories (
    ${PROJECT_SOURCE_DIR}/src
)

add_executable (play-test ${PLAY_TEST_FILES})

target_include_directories(play-test INTERFACE
    $<INSTALL_INTERFACE:include/>
    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/>
)

target_link_libraries(play-test
    ${CMAKE_THREAD_LIBS_INIT}
	${ALSA_INTF_LIBS}
    ${QLRIL_LIBS}
    ${CUTILS_LIBS}
    ${LOG_LIBS}
)

install(TARGETS play-test EXPORT ${EXPORT_TARGETS_NAME}TARGETS
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    FRAMEWORK DESTINATION Frameworks
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    COMPONENT core
)
